--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#">Settings</a>
-              <a class="nav-link" href="#">Logout</a>
             </div>
           </div>
         </div>
@@ -51,7 +49,7 @@
           /></label>
 
           <label for="taskDate"
-            >TaskDate <br /><input type="date" name="taskDate" min="2025-03-01" id="taskDate"
+            >TaskDate <br /><input type="date" name="taskDate" id="taskDate"
           /></label>
 
           <input id="addTaskBtn" type="submit" value="Add New Task" />
@@ -62,7 +60,7 @@
       <div class="errorDisplay"></div>
 
       <div class="tasks">
-        <h1>My Tasks</h1>
+        <h1 class="taskHeading">My Task</h1>
         <div class="tasksCreated"></div>
       </div>
     </div>
